--- a/index.html
+++ b/index.html
@@ -3,44 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="trucs et astuces pour réduire son impact environnementale au quotidien">
-  <title>Greenhome : Zéro déchét à la maison</title>
+  <title> Greenhome </title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="img/natureicon.jpg"/>
 </head>
 <body>
-  <header>
-      <nav class="navbar">
-        <div>
-        <img class="logo" src="img/homerecyl.jpeg" alt="logo de l'association"/>
+  <nav class="navbar">
+    <img src="img/log.png" alt="logo de l'association">
+    <a href="#" class="logo">Greenhome</a>
+    <img class="burger" src="img/menu.png" alt="logo menu">
+      <div class="nav-links">
+        <ul>
+          <li class="active"><a href="#">Qui sommes-nous</a></li>
+          <li><a href="#">liens utiles</a></li>
+          <li ><a href="#">Nous contacter</a></li>
+        </ul>  
       </div>
-        <ul>
-          <li>Qui sommes-nous</li>
-
-          <li>liens utiles</li>
-
-          <li>Nous contacter</li>
-        </ul>
-
-       <div class="burger">
-
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
-          <path strokeLinecap="round" strokeLinejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
-        
-
-       </div> 
       </nav>
-  </header>
+<header class="header"></header>
   <main>
-    <h1 >Tous ensemble, reduisons notre impacte sur l'environnement</h1>
+<article>
+  Vous souhaitez aller plus loin, rejoignez nous pour notre prochain evenement
+</article>
+
+    <h2>Tous ensemble, reduisons notre impacte sur l'environnement</h2>
     <section>
-      <h2>Consommer responsable</h2>
+      <h3 class="titletwo_main">Consommer responsable</h3>
       <P>Pour réduire notre impact sur notre environnement, commençons par changer notre façon de consommer :
-        <ul>
-          <li>priviliégier les circuits court</li>
+        <ul class="section_ul">
+          <li>privilégier les circuits court</li>
           <li>utiliser de la seconde main (brocante, recyclerie, site d'occasion)</li>
-          <li>chosissons du vrac avec des emballages réutilisables</li>
+          <li>choisissons des produits vrac avec des emballages réutilisables</li>
+          <li>recuperons l'eau de pluie pour arroser le jardin</li>
           <li>utilisons des objets réutilsables (piles rechargeables par exemple)</li>
           <li>penser aux paniers anti gaspi (ecologique et économique)</li>
         </ul>
@@ -48,23 +44,23 @@
     </section>
 
     <section>
-      <h2>Reduire ses déchets</h2>
-      <ul>
-        <li>faire les courses regulièrement afin de ne pas jeter de la nourriture</li>
-        <li>Refuser ce dont on a pas besoin</li>
-        <li>louer et emprunter les objets qu'on utilisera qu'une seule fois</li>
+      <h3 class="titletwo_main">Reduire ses déchets</h3>
+      <ul class="section_ul">
+        <li class="section_ul_li">faire les courses regulièrement afin de ne pas jeter de la nourriture</li>
+        <li class="section_ul_li">Refuser ce dont on a pas besoin</li>
+        <li class="section_ul_li">louer et emprunter les objets qu'on utilisera qu'une seule fois</li>
       </ul>
     </section>
 
-    <section>
-      <h2>Recycler</h2>
+    <section >
+      <h3 class="titletwo_main">Recycler</h3>
       <p>
         Nous avons tous adopter le tri selectif pour nos emballages, nous pouvons aller encore plus loin :
-        <ul>
-          <li>composter nos dechets alimentaires et nos dechets verts</li>
-          <li>mettre en vente ou donner les objets en état de fonctionnement</li>
-          <li>recycler les vetements et les verres dans les contenaires mis à disposition dans nbos communes</li>
-          <li>apportons en dechetterie les produits polluants et nos encombrants afin qu'ils soient revaloriser</li>
+        <ul class="section_ul">
+          <li class="section_ul_li">composter nos dechets alimentaires et nos dechets verts</li>
+          <li class="section_ul_li">mettre en vente ou donner les objets en état de fonctionnement</li>
+          <li class="section_ul_li">recycler les vetements et les verres dans les contenaires mis à disposition dans nos communes</li>
+          <li class="section_ul_li">apportons en dechetterie les produits polluants et nos encombrants afin qu'ils soient revaloriser</li>
         </ul>
       </p>
     </section>
